feat: add service leyer unit tests with isolated test configuration and mockito-based unit testing